feat: pages; chore: add static files

--- a/internal/templates/about.templ
+++ b/internal/templates/about.templ
@@ -1,5 +1,22 @@
 package templates
 
 templ About() {
-    <div>This is the about page [ TODO ]</div>
+    <div class="flex flex-col items-center">
+        <h1 class="text-xl p-4">
+            ayoradio
+        </h1>
+        <div class="text-white text-center">
+            small web utility, utilizing arp-scan, go's os/exec, and gocron <br/>
+            detects local devices presence (mobile-phone) and plays bgm beats to relax/study to <br/>
+            also features custom-playback, playlist, and default controls (obv) <br/>
+            design by me (naufal.suryasumirat), flawless ui design amirite? <br/>
+            built with golang, templ, tailwind css, htmx (GOTTH stack) <br/>
+            running on debian bookworm 12.9 (rpi 5) <br/>
+            mandatory fastfetch output: <br/>
+        </div>
+        <img class="rounded pt-8"
+            src="./static/images/fastfetch-rpi.png"
+            width=300
+            height=300 />
+    </div>
 }
