--- a/internal/templates/index.templ
+++ b/internal/templates/index.templ
@@ -1,5 +1,119 @@
 package templates
 
+const roundButton = `
+    w-6 h-6
+    bg-primary-900
+    text-white text-2xl font-bold
+    flex items-center justify-center
+    rounded-full hover:bg-primary-600 focus:outline-none
+`
+
+const normalButton = `
+    bg-primary-900 p-1
+    text-white text-l text-center
+    flex items-center justify-center
+    rounded hover:bg-primary-600 focus:outline-none
+`
+
 templ Index() {
-    <div>Welcome</div>
+    <div hx-ext="reponse-targets" class="flex flex-col items-center h-full p-4">
+        <h1 class="text-center text-2xl mb-4">
+            Welcome home
+        </h1>
+        <div id="idle"></div>
+        <div class="flex space-x-4">
+            <button class={ roundButton }
+                id="vol_down"
+                hx-post="/volume-down"
+                hx-target="#idle">
+                -
+            </button>
+            <label
+                hx-get="/volume"
+                hx-trigger="load,
+                    click from:#vol_down delay:100ms,
+                    click from:#vol_up delay:100ms"
+                hx-target="this">
+            </label>
+            <button class={ roundButton }
+                id="vol_up"
+                hx-post="/volume-up"
+                hx-target="#idle">
+                +
+            </button>
+        </div>
+
+        <div class="m-5">
+            @CurPlaying("")
+        </div>
+
+        <form class="w-full flex flex-col items-center"
+            hx-post="/play"
+            hx-trigger="submit throttle:5s"
+            hx-target="#idle">
+			<div class="w-full flex flex-col items-center">
+				<input type="text"
+                    class="w-full rounded placeholder:text-center"
+                    name="addr"
+                    id="addr"
+                    placeholder="youtube.com/watch?v=jfKfPfyJRdk"
+                    required=""/>
+			</div>
+            <div class="flex space-x-4 justify-center mt-4">
+                <button class={ normalButton }
+                    type="submit"
+                    name="play"
+                    value="replace">
+                    Play
+                </button>
+                <button class={ normalButton }
+                    type="submit"
+                    name="play"
+                    value="queue">
+                    Queue
+                </button>
+            </div>
+        </form>
+
+        <div class="flex space-x-4">
+            <button class={ roundButton }
+                id="play_prev"
+                hx-post="/playlist"
+                hx-target="#idle"
+                name="playlist"
+                value="prev">
+                &lt
+            </button>
+            <button class={ roundButton }
+                id="play_next"
+                hx-post="/playlist"
+                hx-target="#idle"
+                name="playlist"
+                value="next">
+                &gt
+            </button>
+        </div>
+    </div>
+}
+
+// TODO: load once, update every 30s
+templ CurPlaying(addr string) {
+    <img class="m-4 rounded"
+        id="cur-playing"
+        hx-get="/playing"
+        hx-trigger="
+            every 30s,
+            click from:#play_next delay:250ms,
+            click from:#play_prev delay:250ms"
+        hx-target="this"
+        if len(addr) == 0 {
+            src="./static/images/logo.png"
+            width=225
+            height=225
+        } else {
+            src={ addr }
+            width=400
+            height=400
+        }
+        alt="curent playing"/>
 }
