chore: wake once a day, update about

--- a/internal/templates/about.templ
+++ b/internal/templates/about.templ
@@ -6,7 +6,7 @@ templ About() {
             ayoradio
         </h1>
         <div class="text-center">
-            <span class="text-primary-400">small web utility, utilizing arp-scan, go's os/exec, and gocron <br/></span>
+            <span class="text-primary-400">small web utility, utilizing arp-scan, go's os/exec, gocron, and chi (routing) <br/></span>
             <span class="text-primary-500">detects local devices presence (mobile-phone) and plays bgm beats to relax/study to <br/></span>
             <span class="text-primary-400">also features custom-playback, playlist, and default controls (obv) <br/></span>
             <span class="text-primary-500">design by me (naufal.suryasumirat), flawless ui design amirite? <br/></span>
